terraform/sec-group/main.tf
provider "aws" {
	region = "us-east-2"
}

resource "aws_instance" "ec2" {
	ami = "ami-07c8bc5c1ce9598c3"
	instance_type = "t2.micro"
	security_groups = [aws_security_group.webtraffic.name]
}

resource "aws_security_group" "webtraffic" {
	name = "Allow HTTPS"

	ingress {
		from_port = 443
		to_port = 443
		protocol = "TCP"
		cidr_blocks = ["0.0.0.0/0"]
	}

	egress {
		from_port = 443
		to_port = 443
		protocol = "TCP"
		cidr_blocks = ["0.0.0.0/0"]
	}
}
